<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activity_main"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:srcCompat="@mipmap/home_bg1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/firstpage_title"
            android:fontFamily="casual"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/num_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="224dp"
                android:inputType="number"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:hint="20"
                android:text="20"
                android:textSize="36dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="@color/bg_grey"
                android:textColorHint="@android:color/darker_gray"
                />
        </RelativeLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newwords"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:gravity="right"
                android:textSize="24dp"
                android:layout_weight="1"
                />
            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="8dp"/>
            <TextView
                android:id="@+id/newnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="0"
                android:textSize="24dp"
                android:textColor="@color/bg_grey"
                android:textStyle="bold"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="64dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oldwords"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="24dp"
                android:gravity="right"
                />
            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="8dp"/>
            <TextView
                android:id="@+id/oldnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:layout_weight="1"
                android:textSize="24dp"
                android:textColor="@color/bg_grey"
                android:textStyle="bold"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="56dp"/>

            <Button
                android:id="@+id/study_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_home_button"
                android:textSize="14dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/study"
                android:onClick="ClickStudy"/>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="20dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/review_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_home_button"
                android:textSize="14dp"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:text="@string/review"
                android:onClick="ClickReview"/>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="56dp"/>
        </LinearLayout>




    </LinearLayout>



</RelativeLayout>